# APE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  \  ]  imgui.ini  vcpkg.json
.cache/clangd/index/: main.cpp.C3C679442E963994.idx
demos/: test.json
include/: App.h  AppRunner.h
include/render/: Camera.h  Context.h  Image.h  Mesh.h  Model.h  Renderer.h  SafeGPU.h  Shader.h  Transform.h  Vertex.h
include/util/: Logger.h  timing.h
res/shaders/: Default.frag.hlsl  Default.frag.spv  Default.vert.hlsl  Default.vert.spv  PositionColor.vert.hlsl  PositionColor.vert.spv  PositionColorUniform.vert.hlsl  PositionColorUniform.vert.spv  SolidColor.frag.hlsl  SolidColor.frag.spv
src/: App.cpp  App.h  AppRunner.cpp  Application.h  main.cpp
src/components/: Object.h  Render.h
src/core/: AppRunner.cpp  AppRunner.h  Application.h  AssetManager.h  Engine.cpp  Engine.h  Scene.h
src/core/components/: Object.h  Physics.h  Render.h
src/core/ecs/: Pool.h  Registry.h
src/core/input/: Input.cpp  Input.h
src/core/render/: Camera.h  Context.cpp  Context.h  ImGuiSession.h  Image.cpp  Image.h  Mesh.h  Model.h  Renderer.cpp  Renderer.h  SafeGPU.h  Shader.cpp  Shader.h  Vertex.h
src/core/scene/: AssetHandle.h  AssetLoader.h  AssetManager.h  ImageLoader.cpp  ImageLoader.h  ModelLoader.cpp  ModelLoader.h  Scene.h  Serialize.h
src/ecs/: ECS.h  Pool.h  Registry.h
src/editor/: Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h  UI.h
src/layers/editor/: EditorLayer.cpp  EditorLayer.h  UI.h
src/layers/game/: GameLayer.cpp  GameLayer.h
src/physics/: BVH.h  Colliders.h  Collisions.cpp  Collisions.h  Integrator.h  PhysicsWorld.h  RigidBody.h  State.h
src/physics/collisions/: BVH.h  Colliders.h  Collisions.cpp  Collisions.h
src/render/: Camera.h  Context.cpp  Context.h  Cube.h  ImGuiSession.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SafeGPU.h  Shader.cpp  Shader.h  Transform.h  Vertex.h
src/render/Shapes/: Cone.h  Cube.h  Cylinder.h  Sphere.h
src/scene/: AssetHandle.h  AssetLoader.h  AssetManager.h  ImageLoader.cpp  ImageLoader.h  ModelLoader.cpp  ModelLoader.h  Scene.h  Serialize.h
src/util/: Files.h  Logger.h  SparseSet.h  Timing.h  timing.h
tests/: pool_test.cpp  sparse_set_test.cpp
tests/ecs/: pool_test.cpp  registry_test.cpp
tests/physics/: integrator_test.cpp
